# talent-plan

courses/dss/raft/: Cargo.toml
courses/dss/raft/src/proto/: raft.proto
courses/dss/raft/src/raft/: mod.rs  tests.rs
courses/rust/projects/exercises/exercise1/: Cargo.toml
courses/rust/projects/kvs/: Cargo.toml  log
courses/rust/projects/kvs/benches/: benches.rs
courses/rust/projects/kvs/src/: kvs.rs  kvs_client.rs  kvs_server.rs  lib.rs
courses/rust/projects/kvs/src/engines/: kvs.rs  kvs_engine.rs  sled.rs
courses/rust/projects/kvs/src/thread_pool/: mod.rs  naive.rs  rayon.rs  shared_queue.rs
courses/rust/projects/kvs/tests/: kv_store.rs  tests.rs  thread_pool.rs
rust/projects/exercises/exercise1/src/: main.rs  prac.rs
rust/projects/exercises/exercise2/src/: lib.rs  thread_pool.rs
rust/projects/kvs/: Cargo.toml
rust/projects/kvs/benches/: benches.rs
rust/projects/kvs/src/: cli.rs  kvs.rs  lib.rs
rust/projects/kvs/src/engines/: kvs.rs  mod.rs
rust/projects/kvs/src/thread_pool/: rayon.rs
rust/projects/kvs/tests/: cli.rs  kv_store.rs
