[package]
name = "raft"
version = "0.1.0"
author = [
    "nikhil vasan <nikhilvasan8@gmail.com>"
]
edition = "2018"
publish = false

[dependencies]
async-trait = "0.1"
futures = "0.3"
futures-timer = "3.0"
log = "0.4"
prost = "0.6"
prost-derive = "0.6"
rand = "0.7"

labcodec = { path = "../labcodec" }
labrpc = { path = "../labrpc" }
linearizability = { path = "../linearizability"}

[dev-dependencies]
env_logger = "0.7"

[build-dependencies]
prost-build = "0.6"
