[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
author = "Nikhil Vasan <nikhil@plex.engineer> "
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

[dependencies]
clap = {version = "3.2.22", features = ["derive"]}
failure = "0.1.8"
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.85"
tempfile = "3.3.0"
walkdir = "2.3.2"
