[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
author = "Nikhil Vasan <nikhil@plex.engineer> "
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

[dependencies]
clap = {version = "3.2.22", features = ["derive"]}
criterion = "0.4.0"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
crossbeam-utils = "0.8.12"
log = "0.4.17"
panic-control = "0.1.4"
parking_lot = "0.12.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.85"
sled = "0.34.7"
stderrlog = "0.5.3"
tempfile = "3.3.0"
walkdir = "2.3.2"

[[bench]]
name = "benches"
harness = false

[profile.bench]
debug = true
