[package]
name = "exercise1"
version = "0.1.0"
edition = "2021"
author = "Nikhil Vasan <nikhil@plex.engineer>"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
ron = "0.8.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
